--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -8,6 +8,11 @@ on:
 
 env:
   CONFIGURATION_DIRECTORY: ${{ github.workspace }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  VCPKG_FEATURE_FLAGS: dependencygraph
+
+permissions:
+  contents: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -33,7 +38,7 @@ jobs:
         uses: lukka/run-vcpkg@v11
         with:
           vcpkgDirectory: '/opt/vcpkg'
-          vcpkgGitCommitId: '972ca20ed21036c8b80a69cbc7dafa2aad51a37d'
+          vcpkgGitCommitId: 'be2d7f886aad895e282b59088a2dfca5f6e1c88a'
           vcpkgJsonGlob: 'vcpkg.json'
 
       - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
