Added version sanity check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 project(tfc-framework
   VERSION
-    2023.10.1
+    ${CMAKE_PROJECT_VERSION} # Specify the version inside cfg-build.json
   DESCRIPTION
     "The tfc framework eases the integration of often used components in different context with mappable IPC and config."
   HOMEPAGE_URL
