--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -85,17 +85,18 @@ jobs:
         with:
           name: tfc-framework-${{matrix.build_type}}
           path: build/pack-*/*.tar.gz
-      - name: Find tar locaion
+      - id: find-location
+        name: Find tar locaion
         shell: bash
         run: |
-          TAR_LOCATION=$(ls build/pack-*/*.tar.gz)
+          echo "tar-location=$(ls build/pack-*/*.tar.gz)" >> "$GITHUB_OUTPUT"
 
       - name: Upload Release tar file
         if: github.event_name == 'release' && github.event.action == 'created'
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.find-location.outputs.tar-location }}
         with:
           upload_url: ${{ TAR_LOCATION }}
           asset_path: ./build/pack-gcc-${{matrix.build_type}}/*.tar.gz
