--- a/libs/systemctl/systemd/template.service.in
+++ b/libs/systemctl/systemd/template.service.in
@@ -1,10 +1,10 @@
 [Unit]
-Description=TFC Inter-process communication ruler
+Description=@DESCRIPTION@
 Requires=dbus.socket
 After=dbus.socket
 
 [Service]
-ExecStart=/usr/local/bin/ipc-ruler
+ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/@EXE_NAME@
 StandardOutput=journal
 StandardError=journal
 
