--- a/libs/operation_mode/CMakeLists.txt
+++ b/libs/operation_mode/CMakeLists.txt
@@ -37,5 +37,5 @@ endif ()
 include(tfc_install)
 tfc_install_lib(operation_mode)
 
-include("${CMAKE_SOURCE_DIR}/libs/systemctl/CMakeLists.txt")
+include(tfc_systemd)
 tfc_systemd_service_file(operation_mode "TFC Operation Mode")
