--- a/cmake/systemd/tfc@.service
+++ b/cmake/systemd/tfc@.service
@@ -4,7 +4,7 @@ Requires=dbus.socket
 After=dbus.socket
 
 [Service]
-ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/@EXE_NAME@
+ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/%i
 StandardOutput=journal
 StandardError=journal
 
