--- a/exes/ipc-ruler/CMakeLists.txt
+++ b/exes/ipc-ruler/CMakeLists.txt
@@ -33,5 +33,5 @@ install(
   CONFIGURATIONS Debug
 )
 
-include("${CMAKE_SOURCE_DIR}/libs/systemctl/CMakeLists.txt")
+include(tfc_systemd)
 tfc_systemd_service_file(ipc-ruler "TFC Inter-process communication ruler")
