--- a/libs/tfcConfig.cmake.in
+++ b/libs/tfcConfig.cmake.in
@@ -2,7 +2,8 @@
 find_package(glaze CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
-find_package(unofficial-sdbusplus CONFIG REQUIRED)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(SDBUSPLUS REQUIRED IMPORTED_TARGET GLOBAL sdbusplus)
 find_package(magic_enum CONFIG REQUIRED)
 find_package(mp-units CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
