--- a/libs/tfcConfig.cmake.in
+++ b/libs/tfcConfig.cmake.in
@@ -8,6 +8,7 @@ find_package(magic_enum CONFIG REQUIRED)
 find_package(mp-units CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(stduuid CONFIG REQUIRED)
+find_package(protobuf CONFIG REQUIRED)
 find_package(ZeroMQ REQUIRED)
 
 include("${CMAKE_CURRENT_LIST_DIR}/@tfc_PACKAGE_NAME@Targets.cmake")
