--- a/.github/workflows/vcpkg-install-test.yml
+++ b/.github/workflows/vcpkg-install-test.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: lukka/get-cmake@latest
-      - name: Vcpkg install test
+      - name: Install tfc-framework with vcpkg
         uses: lukka/run-vcpkg@v11
         with:
           runVcpkgInstall: true
