adding id and user

--- a/libs/operation_mode/CMakeLists.txt
+++ b/libs/operation_mode/CMakeLists.txt
@@ -38,4 +38,4 @@ include(tfc_install)
 tfc_install_lib(operation_mode)
 
 include(tfc_systemd)
-tfc_systemd_service_file(operation_mode "TFC Operation Mode")
+tfc_systemd_service_file(operation_mode "TFC Operation Mode" "")
