--- a/cmake/systemd/tfc@.service
+++ b/cmake/systemd/tfc@.service
@@ -4,9 +4,10 @@ Requires=dbus.socket
 After=dbus.socket
 
 [Service]
-ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/%i
+ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/@EXE_NAME@ --id %i --stdout --log-level info
 StandardOutput=journal
 StandardError=journal
+User=@USER@
 
 [Install]
 WantedBy=multi-user.target
