--- a/exes/ipc-ruler/CMakeLists.txt
+++ b/exes/ipc-ruler/CMakeLists.txt
@@ -34,4 +34,4 @@ install(
 )
 
 include(tfc_systemd)
-tfc_systemd_service_file(ipc-ruler "TFC Inter-process communication ruler")
+tfc_systemd_service_file(ipc-ruler "TFC Inter-process communication ruler" "")
