create helper method to generate name for dbus connection

--- a/libs/dbus_util/CMakeLists.txt
+++ b/libs/dbus_util/CMakeLists.txt
@@ -19,6 +19,8 @@ target_link_libraries(dbus_util
     magic_enum::magic_enum
     tfc::stx
     tfc::configure_options
+  PRIVATE
+    tfc::base
 )
 
 add_library_to_docs(tfc::dbus_util)
