add missing if stmt in cmake

--- a/libs/stx/CMakeLists.txt
+++ b/libs/stx/CMakeLists.txt
@@ -25,4 +25,6 @@ target_link_libraries(stx
 include(tfc_install)
 tfc_install_lib(stx)
 
-add_subdirectory(tests)
+if (BUILD_TESTING)
+  add_subdirectory(tests)
+endif ()
