--- a/cmake/systemd/tfc@.service
+++ b/cmake/systemd/tfc@.service
@@ -4,7 +4,7 @@ Requires=dbus.socket
 After=dbus.socket
 
 [Service]
-ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/@EXE_NAME@ --id %i --stdout --log-level info
+ExecStart=@CMAKE_INSTALL_PREFIX@/@INSTALL_DIR@/@EXE_NAME@ --id %i
 StandardOutput=journal
 StandardError=journal
 User=@USER@
