--- a/exes/operations/CMakeLists.txt
+++ b/exes/operations/CMakeLists.txt
@@ -51,4 +51,4 @@ install(
 )
 
 include(tfc_systemd)
-tfc_systemd_service_file(operation_mode "TFC Operation Mode")
+tfc_systemd_service_file(operations "TFC Operation Mode")
