--- a/exes/ethercat/systemd/ethercat.service
+++ b/exes/ethercat/systemd/ethercat.service
@@ -4,7 +4,7 @@ Requires=dbus.socket
 After=dbus.socket
 
 [Service]
-ExecStart=/usr/bin/ethercat
+ExecStart=/usr/bin/ethercat --iface %i
 StandardOutput=journal
 StandardError=journal
 
