systemd service for ethercat with iface argument

--- a/exes/ethercat/CMakeLists.txt
+++ b/exes/ethercat/CMakeLists.txt
@@ -45,7 +45,7 @@ endif ()
 include(GNUInstallDirs)
 install(
   FILES
-    systemd/ethercat.service
+    systemd/ethercat@.service
   DESTINATION
     /usr/lib/systemd/system/
   CONFIGURATIONS Release
