--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,3 +2,10 @@ Sphinx==7.2.6
 breathe==4.35.0
 myst_parser==2.0.0
 sphinx-rtd-theme==1.3.0
+sphinx-revealjs==2.7.1
+playwright==1.38.0
+sphinxcontrib-budoux==0.1.5
+sphinxcontrib-gtagjs==0.2.1
+sphinxcontrib-oembed==0.2.2
+sphinxcontrib.sass==0.3.4
+sphinxext.opengraph==0.8.2
