Trying out a new unit library, makes units easier to handle

--- a/cockpit/IPC/package.json
+++ b/cockpit/IPC/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/js-quantities": "^1.6.4",
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -27,6 +28,7 @@
     "bootstrap-icons": "^1.10.5",
     "hamburger-react": "^2.5.0",
     "immutable": "^4.3.0",
+    "js-quantities": "^1.8.0",
     "mathjs": "^11.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
