copy from old branch

--- a/exes/CMakeLists.txt
+++ b/exes/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_subdirectory(ethercat)
-add_subdirectory(button)
 add_subdirectory(gpio)
 add_subdirectory(operations)
 add_subdirectory(tfcctl)
 add_subdirectory(ipc-ruler)
 add_subdirectory(signal_source)
+add_subdirectory(sensor-control)
 add_subdirectory(mqtt-broadcaster)
