--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -7,10 +7,10 @@ add_subdirectory(dbus_util)
 add_subdirectory(stx)
 add_subdirectory(logger)
 add_subdirectory(progbase)
-add_subdirectory(confman)
-add_subdirectory(ipc)
-add_subdirectory(soem_interface)
-add_subdirectory(operation_mode)
+#add_subdirectory(confman)
+#add_subdirectory(ipc)
+#add_subdirectory(soem_interface)
+#add_subdirectory(operation_mode)
 add_subdirectory(mqtt-sparkplug)
 
 add_library(tfc INTERFACE)
