--- a/cockpit/IPC/package.json
+++ b/cockpit/IPC/package.json
@@ -30,6 +30,7 @@
     "mathjs": "^11.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^4.4.0",
     "react-jwt": "^1.1.6",
     "react-modal": "^3.15.1",
