--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -3,7 +3,7 @@ if (BUILD_TESTING)
 endif ()
 
 add_subdirectory(configure_options)
-add_subdirectory(dbus_util)
+#add_subdirectory(dbus_util)
 add_subdirectory(stx)
 add_subdirectory(logger)
 add_subdirectory(progbase)
