--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -34,3 +34,4 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           message: 'Committing clang-format changes'
+          default_author: user_info
