formatting and compacting code
fixing lint errors

adding uuid to cmake

adding boost uuid

converting to another type of uuid

move code to source file

fix linter errors

fix linter errors

fix linter errors

fix linter errors

fix clang error

fix clang compile error relating to date time in library

added comments

add init statement

Adding signals properly UI (#206)

* Broken implementation of splitting slots n signals

* Splitting Signals & Slots in UI

* Reduced duplicate code

* Fixing instability if no processes are present

fixing operation mode (#209)

* fixing operation mode

* remove obsolete test

* Operation mode tests working

---------

Co-authored-by: Ómar Högni Guðmarsson <ohg@skaginn3x.com>

200 make confman example of itemhpp (#210)

* adding example with complicated structure in config

enhance units in json schema (#211)

* enhance units

Embeded observable callback (#213)

Embeded observable callback was erased during from_json parsing by a copy

glz meta fixes (#217)

Glaze meta fixes for frontend

Fixed multiple events per change, added dynamic positioning of watchers (#212)

* Fixed multiple events per change, added dynamic positioning of watchers

* Made page work on mobile, will have to optimize further

* Added watch to IODebug mobile

Confman doc updated (#218)

* Confman doc updated

* Switched timestamps to uuids

Refactoring MQTT broadcaster (#153)

Split mqtt broadcaster to couple of tranlsation units
Implement ssl and no ssl config option

checking out files accidentally changed

checking out files accidentally changed

trying to remove files

trying to remove files

trying to remove files

Adding signals properly UI (#206)

* Broken implementation of splitting slots n signals

* Splitting Signals & Slots in UI

* Reduced duplicate code

* Fixing instability if no processes are present

fixing operation mode (#209)

* fixing operation mode

* remove obsolete test

* Operation mode tests working

---------

Co-authored-by: Ómar Hö

--- a/libs/confman/CMakeLists.txt
+++ b/libs/confman/CMakeLists.txt
@@ -11,6 +11,7 @@ pkg_check_modules(SDBUSPLUS REQUIRED IMPORTED_TARGET GLOBAL sdbusplus)
 add_library(confman
   src/confman.cpp
   src/remote_change.cpp
+  src/file_storage.cpp
   src/detail/config_dbus_client.cpp
 )
 add_library(tfc::confman ALIAS confman)
