brilliant coloring states and publishing plantuml live

--- a/libs/dbus_util/CMakeLists.txt
+++ b/libs/dbus_util/CMakeLists.txt
@@ -19,6 +19,7 @@ target_link_libraries(dbus_util
     magic_enum::magic_enum
     tfc::stx
     tfc::configure_options
+    tfc::logger
   PRIVATE
     tfc::base
 )
