copy example to file

--- a/libs/dbus_util/tests/CMakeLists.txt
+++ b/libs/dbus_util/tests/CMakeLists.txt
@@ -5,9 +5,6 @@ add_executable(dbus_util_test dbus_util_test.cpp)
 
 target_link_libraries(dbus_util_test PRIVATE Boost::ut tfc::logger tfc::base tfc::dbus_util)
 
-add_test(
-  NAME
-        dbus_util_test
-  COMMAND
-        dbus_util_test
-)
+add_test(NAME dbus_util_test COMMAND dbus_util_test)
+
+add_subdirectory(examples)
