[libconfman] Retention policy (#219)
Added backup on configuration changes according to retention policy. On each change in configuration a file is backed up and backups files are cleared according to : need to be older than x days and more than x count.

---------

Co-authored-by: Jón Bjarni Bjarnason <jbbjarnason@gmail.com>
Co-authored-by: magni-mar <magni-mar@users.noreply.github.com>

--- a/libs/confman/testing/tests/CMakeLists.txt
+++ b/libs/confman/testing/tests/CMakeLists.txt
@@ -58,7 +58,7 @@ add_test(
     confman_unit_test
 )
 
-add_executable(file_storage_test file_storage_test.cpp)
+add_executable(file_storage_test ../../src/file_storage.cpp file_storage_test.cpp)
 
 target_link_libraries(file_storage_test
   PRIVATE
