--- a/cockpit/IPC/package.json
+++ b/cockpit/IPC/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "7.21.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@emotion/styled": "^11.11.0",
+    "@hpcc-js/wasm": "^2.14.1",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@patternfly/react-core": "^5.0.1",
@@ -26,8 +27,8 @@
     "@ui-schema/ui-schema": "^0.4.5",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
-    "graphviz-react": "^1.2.5",
     "hamburger-react": "^2.5.0",
+    "html-react-parser": "^5.0.3",
     "immutable": "^4.3.0",
     "js-quantities": "^1.8.0",
     "mathjs": "^11.8.2",
