--- a/libs/motor/tests/CMakeLists.txt
+++ b/libs/motor/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(ut CONFIG REQUIRED)
 
 add_executable(motor_impl_test motor_impl_test.cxx)
 
-target_link_libraries(motor_impl_test PRIVATE Boost::ut tfc.motor tfc::base)
+target_link_libraries(motor_impl_test PRIVATE Boost::ut tfc::motor tfc::base)
 
 add_test(
     NAME
